# hiro

./: .env.example  .gitignore  .gitignore.jjconflict  LICENSE  README.md  README.md.jjconflict  audit.md  case.yaml  docker-compose.yml  pyproject.toml
benchmark/: README.md  __init__.py  generate_corpus.py  test_benchmarks.py  vector_search.py
config/: crawler.yml  embed.yml  global.yml  search.yml  web.yml
db/: tern.conf
db/migrations/: 001_create_documents.sql  002_hybrid_search.sql  003_chunked_hybrid_search.sql  004_halfvec_embeddings.sql
docker/postgres/: init.sql
eval/: queries.example.json  queries.json  run_eval.py  test_run_eval.py
infra/: add_fields.sh
protagonist/: crawl  crawler.example.yml  go.mod  go.sum
protagonist/cmd/: crawl.go
protagonist/config/: config.go  config_test.go
proto/: embedding.proto  search.proto
research/: mps_st.py
wintermute/: __init__.py  config.py  configuration.py  grpc_utils.py  model.py  normalize_urls.py  requirements.txt  test_configuration.py  test_model.py  test_url_utils.py  url_utils.py
wintermute/embed/: chunking.py  config.py  reembed.py  server.py  test_reembed.py  test_server.py
wintermute/search/: config.py  embedding_client.py  server.py  test_embedding_client.py  test_server.py
yours-truly/: go.mod  go.sum  web.example.yml
yours-truly/cmd/: server.go  server.go.jjconflict  server_test.go
yours-truly/config/: config.go  config_test.go
yours-truly/static/: base.css
yours-truly/views/: results.gohtml  search.gohtml  search.gohtml.jjconflict  status.gohtml
(+25 files in other folders)
