[project]
name = "hiro"
version = "0.1.0"
description = "Local semantic search engine and AI knowledgebase"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Christian Schulze" }
]
dependencies = [
  "grpcio==1.82.1",
  "grpcio-reflection==1.82.1",
  "grpcio-tools==1.82.1",
  "numpy==2.4.6",
  "pandas==2.2.3",
  "pgvector==0.5.0",
  "pillow==12.3.0",
  "protobuf==7.35.1",
  "psycopg[pool]>=3.2,<4",
  "pyyaml>=6,<7",
  "sentence-transformers==5.6.0",
  "torch==2.13.0",
  "transformers==5.13.1",
]

[tool.uv]
package = false
